concord-cli: enable native access