@@ -223,7 +223,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <flags>-Xmx128m -client</flags>
+                    <flags>-Xmx128m --enable-native-access=ALL-UNNAMED</flags>
                     <classifier>executable</classifier>
                     <allowOtherTypes>true</allowOtherTypes>
                     <programFile>concord-cli-${project.version}</programFile>
